--- a/Telcom_Customer_Churn/README
+++ b/Telcom_Customer_Churn/README
@@ -1,1 +1,6 @@
+Project: Identifying Customers Likely to Churn for a Telecommunications Provider
 
+In this project, I applied a variety of data exploration and analysis techniques to profile customers of telecommunications provider, who churned.
+This projects entails different types of descriptive statistics, identifying which statistic to use and when, how to apply those statistics and analyze real-world data
+and finally how to extend and support that analysis using appropriate visualizations. This is a guided project from DataQuest.
+The excel file has self-explanatory worksheets and elaborate analysis. The "Final Report" worksheet is the dashboard created to communicating the results which can help to make data-driven decisions that can positively affect both the business and customers.
