--- a/Employee_ExitSurvey/ReadMe
+++ b/Employee_ExitSurvey/ReadMe
@@ -45,6 +45,6 @@ Check for the anomalies in dates containing columns; verifying that the years in
     •	Veteran: 11 or more years at a company
 
 Data Analysis:
-  < Please check the Excel file “EmployeeExitSurvey_analysis” for data analysis, report and observations >
+  < Please check the Excel file “EmployeeExitSurvey_analysis” for detailed data analysis, report and observations >
 
 Thank You!
